fixing the alignment issue of #1074

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -196,7 +196,6 @@ a {
 #search-options-field {
   background-color: #fafafa;
   padding-bottom: 3px;
-  padding-top: 8%;
 }
 
 .helper {
@@ -506,6 +505,10 @@ div.autocorrect {
   #search-options li {
     padding: 0 2.3% 12px;
   }
+
+  #search-options-field {	
+   padding-top: 8%;	
+  }	
 
   #setting-dropdown {
     min-width: 100px;
